[package]
name = "rust_ssh_client"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
russh = "=0.56.0"
russh-sftp = "2.1.1"

[profile.dev]
opt-level = "s"      # мега оптимизация по размеру
lto = true           # link-time optimization
codegen-units = 16

[workspace]
members = [
    "crypto_storage",
]
